--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 name: astrbot_plugin_anti_revoke # 这是你的插件的唯一识别名。
-display_name: QQ防撤回插件 # 用于展示的名字，可以是方便人类阅读的名字（需要版本 >= v4.5.0，低版本不会报错，请放心填写）
+display_name: QQ 防撤回 # 用于展示的名字，可以是方便人类阅读的名字（需要版本 >= v4.5.0，低版本不会报错，请放心填写）
 desc: 可以监控指定群聊会话撤回的消息并发送给目标会话。 # 插件简短描述
 version: v1.1.6 # 插件版本号。格式：v1.1.1 或者 v1.1
 author: Foolllll # 作者
